--- a/index.css
+++ b/index.css
@@ -21,9 +21,12 @@ body{
 .header{
     height: 50px;
     background: black;
+    position: relative;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
 }
 .header .init{
-    float: right;
     width: 50px;
     height: 100%;
     background: #0085d0;
@@ -31,10 +34,21 @@ body{
     text-align: center;
     line-height: 50px;
     cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .content{
     position: relative;
+}
+.content .span{
+    width: 100px;
+    height: 40px;
+    display: block;
+    position: absolute;
+    top: 200px;
+    left: 600px;
 }
 .note{
     width: 240px;
